# Projet3D

./: .gitignore  CMakeLists.txt  main.cpp
core/: CMakeLists.txt  defines.h
core/commons/: allocator.h
core/commons/geo_context/: geo_context.h
core/commons/image/: image.h
core/commons/map/: map.h
core/commons/maths/: maths.h
core/commons/particleSystem/: particleSystem.h
core/commons/particle_system/: particleSystem.h  particle_system.h
core/cpu/geo_context/: geo_context.h  process.h  processes.cpp
core/cpu/kernel/: kernel.h
core/cpu/map/: map.h
core/cpu/particle_system/: particle_system.cpp  particle_system.h
core/includes/: includes_all_cpu.h
core/maths/: maths.h
ui/ui/: CMakeCache.txt  CMakeLists.txt  Takezo.qss  backend.cpp  backend.h  cameracontroller.cpp  cameracontroller.h  clickablelabel.cpp  clickablelabel.h  contexthandle.cpp  fshader.glsl  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdrawwindow.cpp  mapdrawwindow.h  mapitem.cpp  mapitem.h  mesh.cpp  mesh.h  ressources.qrc  scribblearea.cpp  scribblearea.h  shader.cpp  tangentspace.cpp  tangentspace.h  texture.cpp  vshader.glsl
ui/ui/page_3D/Camera/: cameracontroller.cpp
ui/ui/page_3D/Render/: mesh.h  shader.h  tangentspace.cpp  texture.h
ui/ui/page_3D/Widgets/: glwidget.cpp  glwidget.h  mapitem.cpp  mapitem.h
ui/ui/page_image/: mapdrawwindow.cpp
ui/ui/ressources/shaders/: particle_fshader.glsl  particle_vshader.glsl
